--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0 auto;
-    width: 80%;
-    background-color: #ffffff;
+    width: 90%;
+    background-color: #202020;
 }
 
 #top {
@@ -48,6 +48,13 @@ body {
     justify-content: center;
     background-color: #202020;
 }
+.btplayer{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #202020;
+}
 
 audio {
     width: 100%;
@@ -67,7 +74,45 @@ audio {
     margin-bottom: 10px;
     width: 50%;
 }
- 
-@media 500 {
-    
+
+
+.btn-r {
+    border-radius: 0 8px 8px 0;
+    color: #dc3545;
+}
+
+.btn-l {
+    border-radius: 8px 0 0 8px;
+    color: #198754;
+}
+.btn-c {
+    border-radius: 8px 0 0 8px;
+    color: #2f8af3;
+}
+
+
+.btn-g{
+    border-radius: 8px 8px 8px 8px;
+    margin: 0 3px 0 5px;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    background-color: #198754;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out
 }
