--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #202020;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 .btplayer{
     width: 100%;
