--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #202020;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 audio {
